test/parser/cases/valid/small/typed_decl.cp
main()
{
    let value = 1;
    const copy: i32 = value;
}
