test/parser/cases/invalid/small/multiple_reference_type.cp
main()
{
    let value: i32 = 1;
    let bad: i32&& = value;
}
